@@ -23,12 +23,11 @@
 
 bin_PROGRAMS = gerbv
 
-gerbv_SOURCES = gerb_image.c gerb_file.c gerber.c batch.c gerbv.c \
-		draw_amacro.c draw.c drill.c color.c amacro.c exportimage.c \
-		log.c setup.c
+gerbv_SOURCES = gerb_image.c gerb_file.c gerber.c gerbv.c log.c setup.c\
+		draw_amacro.c draw.c drill.c color.c amacro.c exportimage.c
 
-INCLUDES = @GTK_CFLAGS@ @GUILE_CFLAGS@ @GDK_PIXBUF_CFLAGS@
-gerbv_LDADD = @GTK_LIBS@ @GUILE_LDFLAGS@ @GDK_PIXBUF_LIBS@ @PNG_LIBS@
+INCLUDES = @GTK_CFLAGS@ @GDK_PIXBUF_CFLAGS@
+gerbv_LDADD = @GTK_LIBS@ @GDK_PIXBUF_LIBS@ @PNG_LIBS@
 
 AM_CFLAGS=-Wall
 
